--- a/project/src/main/resources/messages_en.properties
+++ b/project/src/main/resources/messages_en.properties
@@ -12,6 +12,7 @@ country.NotBlink=The country should not be blank
 country.size=The username should be at least 2 characters
 #DebitCardDto
 number.NotBlank=The number should not be blank
+number.Size=The number should not be more than 16 characters
 expiryDate.NotNull=The expiry date should not be null
 cvv.NotNull=The cvv should not be null
 #SafeDto
