made logic for creating a user

--- a/project/src/main/resources/messages_en.properties
+++ b/project/src/main/resources/messages_en.properties
@@ -4,12 +4,14 @@ iban.Pattern=The iban should contain only uppercase letters(A-Z) and digits(0-9)
 iban.Size=The iban should not be more than 34 digits
 availableAmount.NotNull=The available amount should not be null
 #BankUserDto
+email.NotBlank=The email should not be blank
+email.Pattern=The email should match the email pattern
 username.NotBlank=The username should not be blank
 username.size=The username should be at least 2 characters
 password.NotBlank=The password should not be blank
 password.Pattern=The password should be between 3 and 30 symbols long
 country.NotBlink=The country should not be blank
-country.size=The username should be at least 2 characters
+country.size=The username should be at most 2 characters
 #DebitCardDto
 number.NotBlank=The number should not be blank
 number.Size=The number should not be more than 16 characters
@@ -23,5 +25,4 @@ initialFunds.NotNull=The initial funds should not be null
 sentAmount.NotNull=The sent Amount should not be null
 issueDate.NotNull=The issue date should not be null
 receiverIban.Pattern=The receiver iban should contain only uppercase letters(A-Z) and digits(0-9)
-receiverIban.NotBlank=The receiver iban should not be blank
 reason.NotBlank=The reason should not be blank
