Fix bugs, add exceptions for 400

--- a/project/src/main/resources/messages_en.properties
+++ b/project/src/main/resources/messages_en.properties
@@ -10,8 +10,8 @@ username.NotBlank=The username should not be blank
 username.size=The username should be at least 2 characters
 password.NotBlank=The password should not be blank
 password.Pattern=The password should be between 3 and 30 symbols long
-country.NotBlink=The country should not be blank
-country.size=The username should be at most 2 characters
+country.NotBlank=The country should not be blank
+country.Size=The country should be at most 2 characters
 #DebitCardDto
 number.NotBlank=The number should not be blank
 number.Size=The number should not be more than 16 characters
