--- a/project/src/main/resources/messages_en.properties
+++ b/project/src/main/resources/messages_en.properties
@@ -22,7 +22,10 @@ name.NotBlank=The name should not be blank
 key.NotBlank=The key should not be blank
 initialFunds.NotNull=The initial funds should not be null
 #TransactionDto
-sentAmount.NotNull=The sent Amount should not be null
+sentAmount.NotNull=The sent amount should not be null
 issueDate.NotNull=The issue date should not be null
 receiverIban.Pattern=The receiver iban should contain only uppercase letters(A-Z) and digits(0-9)
 reason.NotBlank=The reason should not be blank
+#CreditDto
+userIban.NotBlank=The user iban should not be blank
+creditAmount.NotNull=The credit amount should not be null
