crud user account branch (#7)
* added operations for user and account

* Fix my work :D

* updated transaction and deletion of safe

* add not found exceptions

* Add exceptions for 409

* Fix bugs, add exceptions for 400

* Fix check bug

* Change get account by iban

* Add get safe and transaction by iban

* added loan logic

* removed unused import

* Change method for creating safe

* Add exceptions for 400

* updated function name

* Change methods, add endpoints

* Add functionalities for get and delete user, add exception for 404

* Add functionality for update user

* added updating safe and getting debit card

* Add initial logic for email sender

* Add security logic (#6)

* Add security initial configurations

* Add auth configuration

* Add working basic security

* Fix my work

---------

Co-authored-by: annargeorgieva <annargeorgieva@gmail.com>
Co-authored-by: Anna R. Georgieva <106803773+annargeorgieva@users.noreply.github.com>

--- a/project/src/main/resources/messages_en.properties
+++ b/project/src/main/resources/messages_en.properties
@@ -10,8 +10,8 @@ username.NotBlank=The username should not be blank
 username.size=The username should be at least 2 characters
 password.NotBlank=The password should not be blank
 password.Pattern=The password should be between 3 and 30 symbols long
-country.NotBlink=The country should not be blank
-country.size=The username should be at most 2 characters
+country.NotBlank=The country should not be blank
+country.Size=The country should be at most 2 characters
 #DebitCardDto
 number.NotBlank=The number should not be blank
 number.Size=The number should not be more than 16 characters
@@ -22,7 +22,10 @@ name.NotBlank=The name should not be blank
 key.NotBlank=The key should not be blank
 initialFunds.NotNull=The initial funds should not be null
 #TransactionDto
-sentAmount.NotNull=The sent Amount should not be null
+sentAmount.NotNull=The sent amount should not be null
 issueDate.NotNull=The issue date should not be null
 receiverIban.Pattern=The receiver iban should contain only uppercase letters(A-Z) and digits(0-9)
 reason.NotBlank=The reason should not be blank
+#CreditDto
+userIban.NotBlank=The user iban should not be blank
+creditAmount.NotNull=The credit amount should not be null
